# agv_remote_control

./: .gitignore  BUILD.md  CMakeLists.txt  PERIPHERAL_DEVICES.md  README.md  partitions.csv  sdkconfig
main/: Application.cpp  Application.h  CMakeLists.txt  JoystickController.cpp  JoystickController.h  JoystickEvents.h  JoystickEventsDataSource.cpp  JoystickEventsDataSource.h  JoystickEventsProcessor.cpp  JoystickEventsProcessor.h  JoystickEventsSink.cpp  JoystickEventsSink.h  JoystickManager.cpp  JoystickManager.h  Kconfig  MDnsManager.cpp  MDnsManager.h  NavigationManager.cpp  NavigationManager.h  TaskBase.cpp  TaskBase.h  WiFiManager.cpp  WiFiManager.h  main.cpp
main/battery/: BatteryManager.cpp  BatteryManager.h  BatteryStatus.h
main/buttons/: ButtonsManager.cpp  ButtonsManager.h
main/gui/: LvGlApp.cpp  LvGlApp.h  ScreenBase.cpp  ScreenBase.h
main/gui/screens/: IndicatorsScreen.cpp  IndicatorsScreen.h  IndicatorsViewModel.cpp  IndicatorsViewModel.h  LogScreen.cpp  LogScreen.h  MainScreen.cpp  MainScreen.h
main/gui/screens/assets/: Background.c  (+11 more)
main/navigation/: ButtonsManager.cpp  ButtonsManager.h  JoystickController.cpp  JoystickController.h  NavigationManager.cpp  NavigationManager.h
main/navigation/smoothers/: RunningAverageSmoother.cpp  RunningAverageSmoother.h  SmootherBase.h
main/network/: MDnsManager.cpp  MDnsManager.h  WiFiManager.cpp  WiFiManager.h  WiFiStatus.h  WiFiStrange.h
main/ros/: PlatformStatus.h  RosClient.cpp  RosClient.h
main/smoothers/: RunningAverageSmoother.cpp  SmootherBase.cpp
main/utils/: TaskBase.cpp  TaskBase.h
(+33 files in other folders)
